trying to fix smaller screens not centered

--- a/home.css
+++ b/home.css
@@ -81,7 +81,6 @@
 
 .center {
   margin: 0 auto;
-  text-align: center;
   height: auto;
 }
 
